--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="file-input">
                 <h2 style="text-align: center;"><strong>2.</strong>Insert Your Clinic Logo</h2>
                 <div id="dragDropArea" class="drag-drop-area">
-                    <p>Drag & Drop your clinic logo here or click to upload</p>
+                    <p>Click to upload Your Clinic Logo</p>
                     <input type="file" id="logoInput" accept="image/*" style="display: none;">
                 </div>
             </div>
